[package]
name = "libmath"
version = "0.2.1"
authors = ["Janne K <0x022b@gmail.com>"]
license = "MIT"
repository = "https://github.com/scoobadog/libmath-rs"
description = "Mathematical utilities"
keywords = ["mean", "round", "rounding"]

[lib]
name = "math"

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk" , version="1.1.0" }
sgx_rand = { git = "https://github.com/apache/teaclave-sgx-sdk" , version="1.1.0" }
